--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@200;300;400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Vue app</title>
+    <title>Vue basics</title>
   </head>
 
   <body>
